<resources>
    <string name="app_name">German Study Guide</string>
    <string name="title_home">Vocabulary</string>
    <string name="title_dashboard">Grammar</string>
    <string name="title_notifications">Stories</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="words_mastered">Words mastered : %d / %d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="not_registered">Not registered? Click here to sign up!</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="username">Username</string>
    <string name="already_registered">Already registered? Click here to log in.</string>
    <string name="enter">Register for an account. \nRequires email activation.</string>
    <string name="incorrect_password">*Password must be between 8 and 20 characters.</string>
    <string name="email_taken">*Account with this user name already exists.</string>
    <string name="email_valid">*Email is not valid.</string>
    <string name="outOf700">/700</string>
    <string name="loading">loading</string>
    <string name="download_vocab_first">Download vocab first!</string>
    <string name="practice">Practice</string>
</resources>
